# AsioWebServer

./: .clang-format  .gitignore  CMakeLists.txt  Connection.h  HttpParser.h  IOServicePool.h  IResetful.h  README.md  Response.h  ServerHttps.h  UseAsio.h  WebRequest.h  response_cv.hpp
common/: CMakeLists.txt
common/Logger/: AsyncLogger.cpp  AsyncLogger.h  BufferSwaper.h  CMakeLists.txt  FileUtil.h  LogFile.h  LogFileSlicer.cpp  LogFileSlicer.h  LogStream.h  Logger.cpp  Logger.h  ThreadGuard.h  fileutil_win32.cpp
common/Logger/tests/: CMakeLists.txt  LoggingTest.cpp
common/utils/: MyString.h  MyTime.h
resource/ssl/: myssl_server.crt  myssl_server.key  server.crt  server.csr  server.key
resource/web/: abc.js  index.html
src/: CMakeLists.txt  main.cpp
src/Logger/: AsyncLogger.cpp  AsyncLogger.h  AsyncLogger2.cpp  AsyncLogger2.h  BufferSwaper.h  CMakeLists.txt  FileUtil.cpp  FileUtil.h  LogFile.cpp  LogFile.h  LogStream.h  Logger.cpp  Logger.h  ThreadGuard.h  fileutil_win32.cpp  fileutil_win32.h
src/Logger/tests/: CMakeLists.txt  LoggingTest.cpp
src/WebServer/: CMakeLists.txt  ChunkedData.h  Connection.h  Cookie.h  Handle.h  HttpAssembler.h  HttpParser.h  IResetful.h  Response.h  RestfulApi.h  ServerBase.h  ServerHttp.h  ServerHttps.h  WebRequest.h  mime_types.hpp  response_cv.hpp
src/utils/: MyString.h
test/: CMakeLists.txt  LogStream_test.cpp  Main_test.cpp  MyString_test.cpp  Regex_test.cpp
